--- a/index.html
+++ b/index.html
@@ -70,12 +70,10 @@
     </div>
 
     <p class="game-explanation">
+      <strong>2048 : Modified with autoplay by SchizoDuckie</strong><br/>
       <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
     </p>
     <hr>
-    <p>
-    <strong class="important">Note:</strong> This site is the official version of 2048. You can play it on your phone via <a href="http://git.io/2048">http://git.io/2048.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
-    </p>
     <hr>
     <p>
     Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
@@ -126,6 +124,11 @@
 
   function autoPlayUntilLocked() {
     if (pause) return;
+    if(getBoardState().length == 14) {
+    	s.innerHTML = 'autoplay';
+    	pause = true;
+    	return;
+    }
     var lastState = getBoardState();
     down();
     right();
