--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
   function autoPlayUntilLocked() {
     if (pause) return;
-    if(getBoardState().length == 14) {
+    if(getBoardState().split('|').length == 14) {
     	s.innerHTML = 'autoplay';
     	pause = true;
     	return;
@@ -143,7 +143,7 @@
   function getBoardState() {
     return Array.prototype.slice.call(document.querySelectorAll('.tile-inner')).map(function(el) {
         return el.innerHTML;
-    });
+    }).join('|');
   }
 
   function fireKey(keyCode) {
