--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         tiles.filter(function(el) {
 	  count[el.className.match(/tile-position-([0-9]\-[0-9])/)[1]] = true;
 	})
-        if(Object.keys(tiles).length == 14) {
+        if(Object.keys(count).length == 14) {
 	    	s.innerHTML = 'autoplay';
 	    	pause = true;
 	    	return;
