--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       <strong>2048 : Modified with autoplay by SchizoDuckie</strong><br/>
       Autoplay stops at 14 tiles on screen so that you have a chance to fix the rest of the game yourself.
       <p>Ceci n'est pas une A.I.!</p>
+      <p>This is just a script that automatically sends 'down', 'right' keys to the screen until the board is locked in place. After that, it presses 'left', 'down', and switches back to 'down','right'.</p>
       <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
     </p>
     <hr>
